# payment-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  __init__.py
app/: __init__.py  config.py  database.py  enums.py  logging_config.py  main.py  models.py  schemas.py
app/api/: health.py  operations.py  receipts.py
app/provider/: __init__.py  client.py
app/services/: dispatch.py  operations.py  receipts.py
app/worker/: __init__.py  dispatcher.py
tests/: conftest.py  test_dispatch.py  test_dispatch_worker.py  test_health.py  test_main.py  test_operations.py  test_provider_client.py  test_receipts.py  test_recovery.py
