[project]
name = "candidate-service"
version = "0.1.0"
description = "Payment operation service"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2.0",
    "asyncpg>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<10.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["."]
